--- a/web_app/templates/homepage.html
+++ b/web_app/templates/homepage.html
@@ -39,7 +39,7 @@
       </section>
     </main>
     <footer>
-      <p>&copy; 2023 News Analytics</p>
+      <p>&copy; DataKnights:Sp23 DS4300 </p>
     </footer>
   </body>
 </html>
