--- a/web_app/templates/page.html
+++ b/web_app/templates/page.html
@@ -1,12 +1,15 @@
 <!doctype html>
+<html lang="en">
 <head>
 <meta charset="utf-8">
 <title>Page Title</title>
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='dash_style.css') }}">
 </head>
 <body>
-    <div>
-        <center>
-            <img src="/visualization_1", alt="picture">
-        </center>
+  <div class="container">
+    <div class="graph">
+      <img src="/visualization_1" alt="picture">
     </div>
+  </div>
 </body>
+</html>
