--- a/web_app/templates/homepage.html
+++ b/web_app/templates/homepage.html
@@ -12,7 +12,7 @@
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">Articles</a></li>
+          <li><a href="{{ url_for('dash') }}">Visualizations</a></li>
           <li><a href="#">About</a></li>
         </ul>
       </nav>
