--- a/web_app/templates/homepage.html
+++ b/web_app/templates/homepage.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- This was used as the orignal homepage but abandoned later in the project. -->
 <html>
   <head>
     <title>NewsInfo: Spark Powered News Analytics</title>
